--- a/sources/Device/DeviceOSC.uvprojx
+++ b/sources/Device/DeviceOSC.uvprojx
@@ -2376,34 +2376,9 @@
           <GroupName>Menu/Pages</GroupName>
           <Files>
             <File>
-              <FileName>Definition.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\Definition.h</FilePath>
-            </File>
-            <File>
               <FileName>Definition.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Menu\Pages\Definition.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>HelpContent.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\HelpContent.h</FilePath>
-            </File>
-            <File>
-              <FileName>HelpContent.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\HelpContent.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>HelpContentPages.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\HelpContentPages.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageChannels.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageChannels.h</FilePath>
             </File>
             <File>
               <FileName>PageChannels.cpp</FileName>
@@ -2411,139 +2386,204 @@
               <FilePath>.\src\Menu\Pages\PageChannels.cpp</FilePath>
             </File>
             <File>
-              <FileName>PageCursors.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageCursors.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageCursors.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageCursors.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageDebug.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageDebug.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageDebug.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageDebug.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageDisplay.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageDisplay.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageDisplay.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageDisplay.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunction.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunction.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunction.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunction.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunctionFFT.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionFFT.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunctionFrequencyCounter.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionFrequencyCounter.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunctionMultimeter.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionMultimeter.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunctionTester.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionTester.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageHelp.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageHelp.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageHelp.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageHelp.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageMeasures.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageMeasures.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageMeasures.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageMeasures.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageMemory.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageMemory.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageMemory.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageMemory.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageService.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageService.h</FilePath>
-            </File>
-            <File>
-              <FileName>PageService.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageService.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageTime.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageTime.h</FilePath>
-            </File>
-            <File>
               <FileName>PageTime.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Menu\Pages\PageTime.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageTrig.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Menu\Pages\PageTrig.h</FilePath>
             </File>
             <File>
               <FileName>PageTrig.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\Menu\Pages\PageTrig.cpp</FilePath>
             </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/Include</GroupName>
+          <Files>
+            <File>
+              <FileName>Definition.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\Definition.h</FilePath>
+            </File>
+            <File>
+              <FileName>HelpContent.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\HelpContent.h</FilePath>
+            </File>
+            <File>
+              <FileName>HelpContentPages.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\HelpContentPages.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageChannels.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageChannels.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageCursors.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageCursors.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageDebug.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageDebug.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageDisplay.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageDisplay.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunction.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageFunction.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageHelp.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageHelp.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageMeasures.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageMeasures.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageMemory.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageMemory.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageService.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageService.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageTime.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageTime.h</FilePath>
+            </File>
+            <File>
+              <FileName>PageTrig.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Menu\Pages\Include\PageTrig.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageDebug</GroupName>
+          <Files>
+            <File>
+              <FileName>PageDebug.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageDebug\PageDebug.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageDisplay</GroupName>
+          <Files>
+            <File>
+              <FileName>PageDisplay.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageDisplay\PageDisplay.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageFunction</GroupName>
+          <Files>
+            <File>
+              <FileName>PageFunction.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunction.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunctionFFT.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionFFT.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunctionFrequencyCounter.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionFrequencyCounter.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunctionMultimeter.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionMultimeter.cpp</FilePath>
+            </File>
             <File>
               <FileName>PageFunctionRecorder.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionRecorder.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>PageFunctionRecorderSource.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionRecorderSource.cpp</FilePath>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionRecorder.cpp</FilePath>
             </File>
             <File>
               <FileName>PageFunctionRecorderRecord.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\Menu\Pages\PageFunctionRecorderRecord.cpp</FilePath>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionRecorderRecord.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunctionRecorderSource.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionRecorderSource.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageFunctionTester.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageFunction\PageFunctionTester.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageHelp</GroupName>
+          <Files>
+            <File>
+              <FileName>HelpContent.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageHelp\HelpContent.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageHelp.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageHelp\PageHelp.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageMeasures</GroupName>
+          <Files>
+            <File>
+              <FileName>PageCursors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageMeasures\PageCursors.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>PageMeasures.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageMeasures\PageMeasures.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageMemory</GroupName>
+          <Files>
+            <File>
+              <FileName>PageMemory.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageMemory\PageMemory.cpp</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>Menu/Pages/PageService</GroupName>
+          <Files>
+            <File>
+              <FileName>PageService.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Menu\Pages\PageService\PageService.cpp</FilePath>
             </File>
           </Files>
         </Group>
