--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -94,23 +94,23 @@
     <ClCompile Include="..\..\Device\src\Menu\MenuItemsLogic.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\MenuTriggers.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\Definition.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\HelpContent.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageChannels.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageCursors.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageDebug.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionFFT.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionFrequencyCounter.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionRecorder.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionRecorderRecord.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionRecorderSource.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageMemory.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionMultimeter.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageService.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunctionTester.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageDebug\PageDebug.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay\PageDisplay.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFFT.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFrequencyCounter.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionMultimeter.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorder.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderRecord.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderSource.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionTester.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp\HelpContent.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp\PageHelp.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures\PageCursors.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures\PageMeasures.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageMemory\PageMemory.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageService\PageService.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTime.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageTrig.cpp" />
     <ClCompile Include="..\..\Device\src\Multimeter\Multimeter.cpp" />
@@ -254,20 +254,20 @@
     <ClInclude Include="..\..\Device\src\Menu\MenuItemsAdd.h" />
     <ClInclude Include="..\..\Device\src\Menu\MenuItemsDefs.h" />
     <ClInclude Include="..\..\Device\src\Menu\MenuTriggers.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\Definition.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\HelpContent.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\HelpContentPages.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageChannels.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageCursors.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageDebug.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageDisplay.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageFunction.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageHelp.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageMeasures.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageMemory.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageService.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageTime.h" />
-    <ClInclude Include="..\..\Device\src\Menu\Pages\PageTrig.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\Definition.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\HelpContent.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\HelpContentPages.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageChannels.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageCursors.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageDebug.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageDisplay.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageFunction.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageHelp.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageMeasures.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageMemory.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageService.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageTime.h" />
+    <ClInclude Include="..\..\Device\src\Menu\Pages\Include\PageTrig.h" />
     <ClInclude Include="..\..\Device\src\Multimeter\Multimeter.h" />
     <ClInclude Include="..\..\Device\src\Osci\BottomPart.h" />
     <ClInclude Include="..\..\Device\src\Osci\Cursors.h" />
