--- a/sources/OSC-VS/Device/FPGA.vcxproj
+++ b/sources/OSC-VS/Device/FPGA.vcxproj
@@ -98,13 +98,13 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDebug\PageDebug.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageDisplay\PageDisplay.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFFT.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFrequencyCounter.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionMultimeter.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorder.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderRecord.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderSource.cpp" />
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionTester.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_FFT.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_FrequencyCounter.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Multimeter.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder_Record.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder_Source.cpp" />
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Tester.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp\HelpContent.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageHelp\PageHelp.cpp" />
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageMeasures\PageCursors.cpp" />
