--- a/sources/OSC-VS/Device/FPGA.vcxproj.filters
+++ b/sources/OSC-VS/Device/FPGA.vcxproj.filters
@@ -408,25 +408,25 @@
     <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFFT.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_FFT.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionFrequencyCounter.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_FrequencyCounter.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionMultimeter.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Multimeter.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorder.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderRecord.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder_Record.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionRecorderSource.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Recorder_Source.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunctionTester.cpp">
+    <ClCompile Include="..\..\Device\src\Menu\Pages\PageFunction\PageFunction_Tester.cpp">
       <Filter>Menu\Pages\PageFunction</Filter>
     </ClCompile>
   </ItemGroup>
